--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
     </div>
     <script>
 
-▽
       function validate() {
-        var name_val = /^.+$/;
-        var email_val = /^.+$/;
-        var username_val = /^.+$/;
-        var password_val = /^.+$/;
-        var credit_val = /^.+$/;
+        var name_val = /^.*$/;
+        var email_val = /^.*$/;
+        var username_val = /^.*$/;
+        var password_val = /^.*$/;
+        var credit_val = /^.*$/;
 
         var name = document.getElementById('name').value;
         var email = document.getElementById('email').value;
